--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -97,22 +97,39 @@
   "createCategory": "Create Category"
   },
   "auth": {
-    "login": "Login",
-    "register": "Register",
-    "logout": "Logout",
-    "email": "Email",
-    "password": "Password",
-    "confirmPassword": "Confirm Password",
-    "username": "Username",
-    "loginTitle": "Login to Klinkemipedia",
-    "registerTitle": "Create Account",
-    "noAccount": "Don't have an account?",
-    "haveAccount": "Already have an account?",
-    "loginButton": "Login",
-    "registerButton": "Register",
-    "loginError": "Invalid email or password",
-    "registerError": "Registration failed"
-  },
+  "login": "Login",
+  "register": "Register",
+  "logout": "Logout",
+  "email": "Email",
+  "password": "Password",
+  "confirmPassword": "Confirm Password",
+  "username": "Username",
+  "loginTitle": "Login to Klinkemipedia",
+  "registerTitle": "Create Account",
+  "noAccount": "Don't have an account?",
+  "haveAccount": "Already have an account?",
+  "loginButton": "Login",
+  "registerButton": "Register",
+  "loginError": "Invalid email or password",
+  "registerError": "Registration failed",
+  "registerLink": "Register here",
+  "loginLink": "Login here",
+  "hasAccount": "Already have an account?",
+  "loggingIn": "Logging in...",
+  "registering": "Creating account...",
+  "errors": {
+    "usernameRequired": "Username is required",
+    "usernameTooShort": "Username must be at least 3 characters",
+    "usernameTooLong": "Username cannot exceed 20 characters",
+    "emailRequired": "Email is required",
+    "invalidEmail": "Please enter a valid email address",
+    "passwordRequired": "Password is required",
+    "passwordTooShort": "Password must be at least 6 characters",
+    "passwordMismatch": "Passwords do not match",
+    "loginFailed": "Login failed. Please try again.",
+    "registrationFailed": "Registration failed. Please try again."
+  }
+},
   "profile": {
     "title": "Profile",
     "overview": "Overview",
