--- a/src/locales/sv/translation.json
+++ b/src/locales/sv/translation.json
@@ -97,22 +97,39 @@
   "createCategory": "Skapa kategori"
   },
   "auth": {
-    "login": "Logga in",
-    "register": "Registrera",
-    "logout": "Logga ut",
-    "email": "E-post",
-    "password": "Lösenord",
-    "confirmPassword": "Bekräfta lösenord",
-    "username": "Användarnamn",
-    "loginTitle": "Logga in på Klinkemipedia",
-    "registerTitle": "Skapa konto",
-    "noAccount": "Har du inget konto?",
-    "haveAccount": "Har du redan ett konto?",
-    "loginButton": "Logga in",
-    "registerButton": "Registrera",
-    "loginError": "Ogiltig e-post eller lösenord",
-    "registerError": "Registrering misslyckades"
-  },
+  "login": "Logga in",
+  "register": "Registrera",
+  "logout": "Logga ut",
+  "email": "E-post",
+  "password": "Lösenord",
+  "confirmPassword": "Bekräfta lösenord",
+  "username": "Användarnamn",
+  "loginTitle": "Logga in på Klinkemipedia",
+  "registerTitle": "Skapa konto",
+  "noAccount": "Har du inget konto?",
+  "haveAccount": "Har du redan ett konto?",
+  "loginButton": "Logga in",
+  "registerButton": "Registrera",
+  "loginError": "Ogiltig e-post eller lösenord",
+  "registerError": "Registrering misslyckades",
+  "registerLink": "Registrera här",
+  "loginLink": "Logga in här",
+  "hasAccount": "Har du redan ett konto?",
+  "loggingIn": "Loggar in...",
+  "registering": "Skapar konto...",
+  "errors": {
+    "usernameRequired": "Användarnamn krävs",
+    "usernameTooShort": "Användarnamn måste vara minst 3 tecken",
+    "usernameTooLong": "Användarnamn kan inte överstiga 20 tecken",
+    "emailRequired": "E-post krävs",
+    "invalidEmail": "Ange en giltig e-postadress",
+    "passwordRequired": "Lösenord krävs",
+    "passwordTooShort": "Lösenord måste vara minst 6 tecken",
+    "passwordMismatch": "Lösenorden matchar inte",
+    "loginFailed": "Inloggning misslyckades. Försök igen.",
+    "registrationFailed": "Registrering misslyckades. Försök igen."
+  }
+},
   "profile": {
     "title": "Profil",
     "overview": "Översikt",
