--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -11,16 +11,26 @@
     "users": "Users",
     "comments": "Comments",
     "viewSite": "View Site",
-    "categories": "Categories"
+    "categories": "Categories",
+    "mediaAnalytics": "Media Analytics"
   },
   "search": {
     "placeholder": "Search articles...",
     "button": "Search",
     "results": "Search Results",
-    "noResults": "No articles found matching your search.",
+    "noResults": "No articles found matching your search for \"{{query}}\"",
     "showing": "Showing",
     "of": "of",
-    "resultsFor": "results for"
+    "resultsFor": "results for",
+    "resultsCount": "{{count}} result",
+    "resultsCount_plural": "{{count}} results",
+    "searching": "Searching...",
+    "searchFor": "Searching for \"{{query}}\"...",
+    "clearSearch": "Clear Search",
+    "applyFilters": "Apply Filters",
+    "clearFilters": "Clear Filters",
+    "viewCount": "view",
+    "viewCount_plural": "views"
   },
   "filter": {
     "by": "Filter by",
@@ -31,10 +41,14 @@
     "readMore": "Read More",
     "backToHome": "Back to Home",
     "notFound": "Article not found",
+    "articleNotFound": "Article Not Found",
+    "errorLoadingArticle": "Error Loading Article",
     "loading": "Loading article...",
+    "loadingArticles": "Loading articles...",
     "category": "Category",
     "tags": "Tags",
     "lastUpdated": "Last updated",
+    "lastModified": "Last Modified",
     "created": "Created",
     "createTitle": "Create New Article",
     "editTitle": "Edit Article",
@@ -55,6 +69,7 @@
     "contentPlaceholder": "Write your article content here...",
     "characters": "characters",
     "words": "words",
+    "views": "Views",
     "uploadImage": "Upload Image",
     "relatedTests": "Related Tests",
     "relatedTestsLabel": "Related Tests",
@@ -81,6 +96,7 @@
     "updateSuccess": "Article updated successfully!",
     "createSuccess": "Article created successfully!",
     "saveFailed": "Failed to save article",
+    "noArticlesFound": "No articles found",
     "validation": {
       "titleRequired": "Title is required",
       "titleTooLong": "Title cannot exceed 200 characters",
@@ -89,47 +105,61 @@
       "summaryTooLong": "Summary cannot exceed 500 characters",
       "contentRequired": "Content is required"
     },
-    "tags": "Tags",
-  "enterTag": "Type a tag and press Enter",
-  "tagLimitReached": "Maximum tags reached",
-  "tagLimit": "{{current}} / {{max}} tags",
-  "addCategory": "Add Category",
-  "createCategory": "Create Category"
+    "enterTag": "Type a tag and press Enter",
+    "tagLimitReached": "Maximum tags reached",
+    "tagLimit": "{{current}} / {{max}} tags",
+    "addCategory": "Add Category",
+    "createCategory": "Create Category",
+    "createArticle": "Create Article"
   },
   "auth": {
-  "login": "Login",
-  "register": "Register",
-  "logout": "Logout",
-  "email": "Email",
-  "password": "Password",
-  "confirmPassword": "Confirm Password",
-  "username": "Username",
-  "loginTitle": "Login to Klinkemipedia",
-  "registerTitle": "Create Account",
-  "noAccount": "Don't have an account?",
-  "haveAccount": "Already have an account?",
-  "loginButton": "Login",
-  "registerButton": "Register",
-  "loginError": "Invalid email or password",
-  "registerError": "Registration failed",
-  "registerLink": "Register here",
-  "loginLink": "Login here",
-  "hasAccount": "Already have an account?",
-  "loggingIn": "Logging in...",
-  "registering": "Creating account...",
-  "errors": {
-    "usernameRequired": "Username is required",
-    "usernameTooShort": "Username must be at least 3 characters",
-    "usernameTooLong": "Username cannot exceed 20 characters",
-    "emailRequired": "Email is required",
-    "invalidEmail": "Please enter a valid email address",
-    "passwordRequired": "Password is required",
-    "passwordTooShort": "Password must be at least 6 characters",
-    "passwordMismatch": "Passwords do not match",
-    "loginFailed": "Login failed. Please try again.",
-    "registrationFailed": "Registration failed. Please try again."
-  }
-},
+    "login": "Login",
+    "register": "Register",
+    "logout": "Logout",
+    "email": "Email",
+    "password": "Password",
+    "confirmPassword": "Confirm Password",
+    "username": "Username",
+    "loginTitle": "Login to Klinkemipedia",
+    "registerTitle": "Create Account",
+    "noAccount": "Don't have an account?",
+    "haveAccount": "Already have an account?",
+    "loginButton": "Login",
+    "registerButton": "Register",
+    "loginError": "Invalid email or password",
+    "registerError": "Registration failed",
+    "registerLink": "Register here",
+    "loginLink": "Login here",
+    "hasAccount": "Already have an account?",
+    "loggingIn": "Logging in...",
+    "registering": "Creating account...",
+    "errors": {
+      "usernameRequired": "Username is required",
+      "usernameTooShort": "Username must be at least 3 characters",
+      "usernameTooLong": "Username cannot exceed 20 characters",
+      "emailRequired": "Email is required",
+      "invalidEmail": "Please enter a valid email address",
+      "passwordRequired": "Password is required",
+      "passwordTooShort": "Password must be at least 6 characters",
+      "passwordMismatch": "Passwords do not match",
+      "loginFailed": "Login failed. Please try again.",
+      "registrationFailed": "Registration failed. Please try again."
+    }
+  },
+  "common": {
+    "loading": "Loading...",
+    "save": "Save",
+    "cancel": "Cancel",
+    "delete": "Delete",
+    "edit": "Edit",
+    "add": "Add",
+    "search": "Search",
+    "actions": "Actions",
+    "back": "Back",
+    "view": "View",
+    "close": "Close",
+    "at": "at"
+  },
   "profile": {
     "title": "Profile",
     "overview": "Overview",
@@ -149,7 +179,16 @@
       "description": "You can return to the home page or search for articles.",
       "goHome": "Go to Home",
       "searchArticles": "Search Articles"
-    }
+    },
+    "about": "Developed by Filip Landgren (filip.landgren@gmail.com)"
+  },
+  "home": {
+    "subtitle": "Your comprehensive clinical laboratory reference"
+  },
+  "language": {
+    "label": "Language",
+    "swedish": "Swedish",
+    "english": "English"
   },
   "categories": {
     "management": "Category Management",
@@ -187,5 +226,164 @@
     "loading": "Loading...",
     "namePlaceholder": "e.g., Electrolytes",
     "descriptionPlaceholder": "Optional description for this category"
+  },
+  "tags": {
+    "title": "Tags",
+    "manageTitle": "Manage tags",
+    "browseTitle": "Browse tags",
+    "create": "Create tag",
+    "createPlaceholder": "Enter tag name",
+    "add": "Add tag",
+    "remove": "Remove",
+    "edit": "Edit",
+    "delete": "Delete",
+    "merge": "Merge tags",
+    "mergeTitle": "Merge tags",
+    "mergeInstructions": "Select source tags to merge and provide a target tag name",
+    "mergeSourcePlaceholder": "Select or search source tags",
+    "mergeTargetPlaceholder": "Enter target tag name",
+    "mergeConfirm": "Confirm merge",
+    "deleteConfirm": "Are you sure you want to remove this tag from all articles?",
+    "name": "Name",
+    "description": "Description",
+    "countLabel": "{{count}} articles",
+    "noTags": "No tags found",
+    "noTagsInstructions": "Create the first tag to get started",
+    "searchPlaceholder": "Search tags...",
+    "loading": "Loading tags...",
+    "actions": "Actions",
+    "viewArticles": "View articles",
+    "successCreate": "Tag created",
+    "successUpdate": "Tag updated",
+    "successDelete": "Tag deleted",
+    "successMerge": "Tags merged",
+    "errorCreate": "Failed to create tag",
+    "errorUpdate": "Failed to update tag",
+    "errorDelete": "Failed to delete tag",
+    "errorMerge": "Failed to merge tags",
+    "validation": {
+      "nameRequired": "Tag name is required",
+      "nameTooLong": "Tag name is too long",
+      "maxTags": "Maximum of {{max}} tags allowed"
+    },
+    "placeholders": {
+      "addTag": "Type a tag and press Enter",
+      "editTag": "Edit tag name"
+    },
+    "confirmation": {
+      "deleteTitle": "Delete tag",
+      "mergeTitle": "Merge tags",
+      "cancel": "Cancel",
+      "confirm": "Confirm"
+    },
+    "browseByTag": "Browse by tag",
+    "tagCloud": "Tag cloud",
+    "allTags": "All tags",
+    "tagManagement": "Tag management",
+    "mergeTags": "Merge tags",
+    "mergeTagsPlaceholder": "Select or type tags to merge",
+    "mergeTagsConfirm": "Confirm merge",
+    "browseByTagTitle": "Articles tagged \"{{tag}}\"",
+    "tagCloudInstructions": "Click a tag to filter articles",
+    "allTagsCountLabel": "{{count}} tags",
+    "tagManagementIntro": "Admins can merge or delete tags here",
+    "mergeSuccess": "Tags merged",
+    "mergeError": "Failed to merge tags",
+    "addTag": "Add New Tag",
+    "editTag": "Edit Tag",
+    "deleteTag": "Delete Tag",
+    "tagName": "Tag Name",
+    "tagNamePlaceholder": "Enter tag name",
+    "usageCount": "Usage Count",
+    "searchTags": "Search tags...",
+    "confirmDeleteTag": "Confirm Delete",
+    "deleteTagWarning": "This action cannot be undone.",
+    "deleteTagDetail": "Are you sure you want to delete the tag \"{{tag}}\"?",
+    "deleteTagUsage": "This tag is currently used in {{count}} article(s). It will be removed from all of them.",
+    "tagDeleted": "Tag deleted successfully",
+    "tagAdded": "Tag added successfully",
+    "tagUpdated": "Tag renamed successfully",
+    "tagExists": "A tag with this name already exists",
+    "tagNameRequired": "Tag name cannot be empty",
+    "currentTag": "Current tag:",
+    "newTagName": "New Tag Name",
+    "renameTagInfo": "This will rename the tag across all {{count}} article(s)",
+    "selectSourceTags": "Select source tags",
+    "sourceTagsHelp": "Select tags to merge into one target tag",
+    "selectTargetTag": "Select target tag",
+    "targetTagHelp": "Enter the name of the target tag",
+    "enterTag": "Enter tag name",
+    "tagsMerged": "Tags merged successfully",
+    "tagCount": "{{count}} article(s)",
+    "cancel": "Cancel",
+    "save": "Save Changes",
+    "adding": "Adding...",
+    "saving": "Saving...",
+    "deleting": "Deleting...",
+    "noTagsFound": "No tags found matching your search",
+    "articlesTaggedWith": "Articles tagged with",
+    "noArticlesWithTag": "No articles found with this tag"
+  },
+  "revisions": {
+    "title": "Revision History",
+    "version": "Version",
+    "viewHistory": "View History",
+    "compareVersions": "Compare Versions",
+    "restoreVersion": "Restore Version",
+    "viewVersion": "View Version",
+    "restoreThisVersion": "Restore This Version",
+    "compareSelected": "Compare Selected",
+    "cancelCompare": "Cancel Compare",
+    "loading": "Loading revisions...",
+    "loadingComparison": "Loading comparison...",
+    "noRevisions": "No revisions found",
+    "empty": "Empty",
+    "noDescription": "No description provided",
+    "editedBy": "Edited by",
+    "editedAt": "Edited at",
+    "changeDescription": "Change Description",
+    "versionNumber": "Version {{number}}",
+    "backToList": "Back to List",
+    "selectToCompare": "Select to Compare",
+    "category": "Category",
+    "summary": "Summary",
+    "clinicalSignificance": "Clinical Significance",
+    "interpretation": "Interpretation",
+    "compareVersionTitle": "Comparing Version {{v1}} and Version {{v2}}",
+    "changedField": "Changed",
+    "unchangedField": "Unchanged"
+  },
+  "media": {
+    "totalImages": "Total Images",
+    "totalSize": "Total Size",
+    "unusedImages": "Unused Images",
+    "unusedSize": "Unused Size"
+  },
+  "messages": {
+    "success": {
+      "urlCopied": "URL copied to clipboard"
+    },
+    "error": {
+      "loadFailed": "Failed to load data",
+      "somethingWrong": "Something went wrong"
+    },
+    "info": {
+      "noData": "No data available"
+    },
+    "confirm": {
+      "deleteArticle": "Confirm Delete Article",
+      "deleteArticleDetail": "Are you sure you want to delete \"{{title}}\"? This action cannot be undone."
+    }
+  },
+  "sort": {
+    "by": "Sort by",
+    "descending": "Newest First",
+    "ascending": "Oldest First"
+  },
+  "table": {
+    "title": "Title",
+    "category": "Category",
+    "status": "Status",
+    "actions": "Actions"
   }
 }
