--- a/src/locales/sv/translation.json
+++ b/src/locales/sv/translation.json
@@ -10,17 +10,27 @@
     "mediaLibrary": "Mediabibliotek",
     "users": "Användare",
     "comments": "Kommentarer",
-    "viewSite": "Visa sida",
-    "categories": "Kategorier"
+    "viewSite": "Visa webbplats",
+    "categories": "Kategorier",
+    "mediaAnalytics": "Mediaanalys"
   },
   "search": {
     "placeholder": "Sök artiklar...",
     "button": "Sök",
     "results": "Sökresultat",
-    "noResults": "Inga artiklar hittades som matchar din sökning.",
+    "noResults": "Inga artiklar hittades som matchar din sökning efter \"{{query}}\"",
     "showing": "Visar",
     "of": "av",
-    "resultsFor": "resultat för"
+    "resultsFor": "resultat för",
+    "resultsCount": "{{count}} resultat",
+    "resultsCount_plural": "{{count}} resultat",
+    "searching": "Söker...",
+    "searchFor": "Söker efter \"{{query}}\"...",
+    "clearSearch": "Rensa sökning",
+    "applyFilters": "Tillämpa filter",
+    "clearFilters": "Rensa filter",
+    "viewCount": "visning",
+    "viewCount_plural": "visningar"
   },
   "filter": {
     "by": "Filtrera efter",
@@ -29,19 +39,23 @@
   },
   "article": {
     "readMore": "Läs mer",
-    "backToHome": "Tillbaka till start",
+    "backToHome": "Tillbaka till hem",
     "notFound": "Artikel hittades inte",
+    "articleNotFound": "Artikeln hittades inte",
+    "errorLoadingArticle": "Fel vid laddning av artikel",
     "loading": "Laddar artikel...",
+    "loadingArticles": "Laddar artiklar...",
     "category": "Kategori",
     "tags": "Taggar",
     "lastUpdated": "Senast uppdaterad",
+    "lastModified": "Senast ändrad",
     "created": "Skapad",
     "createTitle": "Skapa ny artikel",
     "editTitle": "Redigera artikel",
     "showPreview": "Visa förhandsgranskning",
     "hidePreview": "Dölj förhandsgranskning",
     "versionHistory": "Versionshistorik",
-    "success": "Framgång",
+    "success": "Lyckades",
     "edit": "Redigera",
     "preview": "Förhandsgranskning",
     "basicInfo": "Grundläggande information",
@@ -55,16 +69,17 @@
     "contentPlaceholder": "Skriv ditt artikelinnehåll här...",
     "characters": "tecken",
     "words": "ord",
+    "views": "Visningar",
     "uploadImage": "Ladda upp bild",
     "relatedTests": "Relaterade tester",
     "relatedTestsLabel": "Relaterade tester",
-    "relatedTestsPlaceholder": "Skriv ett testnamn och tryck på Enter",
-    "relatedTestsHelp": "Tryck på Enter för att lägga till ett relaterat test",
+    "relatedTestsPlaceholder": "Skriv ett testnamn och tryck Enter",
+    "relatedTestsHelp": "Tryck Enter för att lägga till ett relaterat test",
     "metadata": "Metadata",
     "references": "Referenser",
     "referencePlaceholder": "Referens",
     "addReference": "Lägg till referens",
-    "changeDescription": "Ändringsbeskrivning (Valfritt)",
+    "changeDescription": "Ändringsbeskrivning (valfritt)",
     "changeDescriptionPlaceholder": "Beskriv vad du ändrade i denna version...",
     "changeDescriptionHelp": "Hjälp andra att förstå vad som ändrades i denna revision (max 200 tecken)",
     "status": "Status",
@@ -75,61 +90,76 @@
     "saveAsDraft": "Spara som utkast",
     "publishing": "Publicerar...",
     "publish": "Publicera",
-    "imageUploadSuccess": "Bilden laddades upp!",
+    "imageUploadSuccess": "Bild uppladdad!",
     "loadFailed": "Kunde inte ladda artikel",
-    "fixValidationErrors": "Vänligen åtgärda valideringsfelen innan du skickar in",
+    "fixValidationErrors": "Vänligen åtgärda valideringsfelen innan du skickar",
     "updateSuccess": "Artikel uppdaterad!",
     "createSuccess": "Artikel skapad!",
     "saveFailed": "Kunde inte spara artikel",
+    "noArticlesFound": "Inga artiklar hittades",
     "validation": {
       "titleRequired": "Titel krävs",
-      "titleTooLong": "Titel kan inte överstiga 200 tecken",
+      "titleTooLong": "Titeln får inte överstiga 200 tecken",
       "categoryRequired": "Kategori krävs",
       "summaryRequired": "Sammanfattning krävs",
-      "summaryTooLong": "Sammanfattning kan inte överstiga 500 tecken",
+      "summaryTooLong": "Sammanfattningen får inte överstiga 500 tecken",
       "contentRequired": "Innehåll krävs"
     },
-    "tags": "Taggar",
-  "enterTag": "Skriv en tagg och tryck Enter",
-  "tagLimitReached": "Maximalt antal taggar nått",
-  "tagLimit": "{{current}} / {{max}} taggar",
-  "addCategory": "Lägg till kategori",
-  "createCategory": "Skapa kategori"
+    "enterTag": "Skriv en tagg och tryck Enter",
+    "tagLimitReached": "Max antal taggar nått",
+    "tagLimit": "{{current}} / {{max}} taggar",
+    "addCategory": "Lägg till kategori",
+    "createCategory": "Skapa kategori",
+    "createArticle": "Skapa artikel"
   },
   "auth": {
-  "login": "Logga in",
-  "register": "Registrera",
-  "logout": "Logga ut",
-  "email": "E-post",
-  "password": "Lösenord",
-  "confirmPassword": "Bekräfta lösenord",
-  "username": "Användarnamn",
-  "loginTitle": "Logga in på Klinkemipedia",
-  "registerTitle": "Skapa konto",
-  "noAccount": "Har du inget konto?",
-  "haveAccount": "Har du redan ett konto?",
-  "loginButton": "Logga in",
-  "registerButton": "Registrera",
-  "loginError": "Ogiltig e-post eller lösenord",
-  "registerError": "Registrering misslyckades",
-  "registerLink": "Registrera här",
-  "loginLink": "Logga in här",
-  "hasAccount": "Har du redan ett konto?",
-  "loggingIn": "Loggar in...",
-  "registering": "Skapar konto...",
-  "errors": {
-    "usernameRequired": "Användarnamn krävs",
-    "usernameTooShort": "Användarnamn måste vara minst 3 tecken",
-    "usernameTooLong": "Användarnamn kan inte överstiga 20 tecken",
-    "emailRequired": "E-post krävs",
-    "invalidEmail": "Ange en giltig e-postadress",
-    "passwordRequired": "Lösenord krävs",
-    "passwordTooShort": "Lösenord måste vara minst 6 tecken",
-    "passwordMismatch": "Lösenorden matchar inte",
-    "loginFailed": "Inloggning misslyckades. Försök igen.",
-    "registrationFailed": "Registrering misslyckades. Försök igen."
-  }
-},
+    "login": "Logga in",
+    "register": "Registrera",
+    "logout": "Logga ut",
+    "email": "E-post",
+    "password": "Lösenord",
+    "confirmPassword": "Bekräfta lösenord",
+    "username": "Användarnamn",
+    "loginTitle": "Logga in på Klinkemipedia",
+    "registerTitle": "Skapa konto",
+    "noAccount": "Har du inget konto?",
+    "haveAccount": "Har du redan ett konto?",
+    "loginButton": "Logga in",
+    "registerButton": "Registrera",
+    "loginError": "Ogiltig e-post eller lösenord",
+    "registerError": "Registrering misslyckades",
+    "registerLink": "Registrera här",
+    "loginLink": "Logga in här",
+    "hasAccount": "Har du redan ett konto?",
+    "loggingIn": "Loggar in...",
+    "registering": "Skapar konto...",
+    "errors": {
+      "usernameRequired": "Användarnamn krävs",
+      "usernameTooShort": "Användarnamnet måste vara minst 3 tecken",
+      "usernameTooLong": "Användarnamnet får inte överstiga 20 tecken",
+      "emailRequired": "E-post krävs",
+      "invalidEmail": "Ange en giltig e-postadress",
+      "passwordRequired": "Lösenord krävs",
+      "passwordTooShort": "Lösenordet måste vara minst 6 tecken",
+      "passwordMismatch": "Lösenorden matchar inte",
+      "loginFailed": "Inloggning misslyckades. Försök igen.",
+      "registrationFailed": "Registrering misslyckades. Försök igen."
+    }
+  },
+  "common": {
+    "loading": "Laddar...",
+    "save": "Spara",
+    "cancel": "Avbryt",
+    "delete": "Ta bort",
+    "edit": "Redigera",
+    "add": "Lägg till",
+    "search": "Sök",
+    "actions": "Åtgärder",
+    "back": "Tillbaka",
+    "view": "Visa",
+    "close": "Stäng",
+    "at": "klockan"
+  },
   "profile": {
     "title": "Profil",
     "overview": "Översikt",
@@ -137,8 +167,8 @@
     "activity": "Aktivitet",
     "bio": "Bio",
     "noBio": "Ingen bio angiven",
-    "noArticles": "Inga artiklar ännu",
-    "noActivity": "Ingen aktivitet ännu",
+    "noArticles": "Inga artiklar än",
+    "noActivity": "Ingen aktivitet än",
     "notFound": "Användare hittades inte"
   },
   "page": {
@@ -146,10 +176,19 @@
       "title": "404",
       "heading": "Sidan hittades inte",
       "message": "Sidan du letar efter finns inte eller har flyttats.",
-      "description": "Du kan återvända till startsidan eller söka efter artiklar.",
+      "description": "Du kan gå tillbaka till startsidan eller söka efter artiklar.",
       "goHome": "Gå till startsidan",
       "searchArticles": "Sök artiklar"
-    }
+    },
+    "about": "Utvecklad av Filip Landgren (filip.landgren@gmail.com)"
+  },
+  "home": {
+    "subtitle": "Din omfattande kliniska laboratoriereferens"
+  },
+  "language": {
+    "label": "Språk",
+    "swedish": "Svenska",
+    "english": "Engelska"
   },
   "categories": {
     "management": "Kategorihantering",
@@ -161,16 +200,16 @@
     "color": "Färg",
     "articles": "Artiklar",
     "actions": "Åtgärder",
-    "noCategories": "Inga kategorier ännu. Klicka på \"Lägg till kategori\" för att skapa en.",
-    "colorHelper": "Välj en färg för denna kategorimärkning",
-    "preview": "Förhandsvisning",
+    "noCategories": "Inga kategorier än. Klicka på \"Lägg till kategori\" för att skapa en.",
+    "colorHelper": "Välj en färg för denna kategori-badge",
+    "preview": "Förhandsgranska",
     "cancel": "Avbryt",
     "saveChanges": "Spara ändringar",
     "delete": "Ta bort",
     "deleteTitle": "Ta bort kategori",
     "deleteWarning": "Varning",
     "usedBy": "Denna kategori används av",
-    "articlesPlural": "artikel(ar)",
+    "articlesPlural": "artikel/artiklar",
     "moveTo": "Flytta artiklar till:",
     "selectCategory": "-- Välj en kategori --",
     "notUsed": "Denna kategori används inte av några artiklar och kan tas bort säkert.",
@@ -187,5 +226,164 @@
     "loading": "Laddar...",
     "namePlaceholder": "t.ex., Elektrolyter",
     "descriptionPlaceholder": "Valfri beskrivning för denna kategori"
+  },
+  "tags": {
+    "title": "Taggar",
+    "manageTitle": "Hantera taggar",
+    "browseTitle": "Bläddra bland taggar",
+    "create": "Skapa tagg",
+    "createPlaceholder": "Ange taggnamn",
+    "add": "Lägg till tagg",
+    "remove": "Ta bort",
+    "edit": "Redigera",
+    "delete": "Ta bort",
+    "merge": "Slå samman taggar",
+    "mergeTitle": "Slå samman taggar",
+    "mergeInstructions": "Välj källtaggar att slå samman och ange ett måltaggnamn",
+    "mergeSourcePlaceholder": "Välj eller sök källtaggar",
+    "mergeTargetPlaceholder": "Ange måltaggnamn",
+    "mergeConfirm": "Bekräfta sammanslagning",
+    "deleteConfirm": "Är du säker på att du vill ta bort denna tagg från alla artiklar?",
+    "name": "Namn",
+    "description": "Beskrivning",
+    "countLabel": "{{count}} artiklar",
+    "noTags": "Inga taggar hittades",
+    "noTagsInstructions": "Skapa den första taggen för att komma igång",
+    "searchPlaceholder": "Sök taggar...",
+    "loading": "Laddar taggar...",
+    "actions": "Åtgärder",
+    "viewArticles": "Visa artiklar",
+    "successCreate": "Tagg skapad",
+    "successUpdate": "Tagg uppdaterad",
+    "successDelete": "Tagg borttagen",
+    "successMerge": "Taggar sammanslagna",
+    "errorCreate": "Kunde inte skapa tagg",
+    "errorUpdate": "Kunde inte uppdatera tagg",
+    "errorDelete": "Kunde inte ta bort tagg",
+    "errorMerge": "Kunde inte slå samman taggar",
+    "validation": {
+      "nameRequired": "Taggnamn krävs",
+      "nameTooLong": "Taggnamnet är för långt",
+      "maxTags": "Maximalt {{max}} taggar tillåtna"
+    },
+    "placeholders": {
+      "addTag": "Skriv en tagg och tryck Enter",
+      "editTag": "Redigera taggnamn"
+    },
+    "confirmation": {
+      "deleteTitle": "Ta bort tagg",
+      "mergeTitle": "Slå samman taggar",
+      "cancel": "Avbryt",
+      "confirm": "Bekräfta"
+    },
+    "browseByTag": "Bläddra efter tagg",
+    "tagCloud": "Taggmoln",
+    "allTags": "Alla taggar",
+    "tagManagement": "Tagghantering",
+    "mergeTags": "Slå samman taggar",
+    "mergeTagsPlaceholder": "Välj eller skriv taggar att slå samman",
+    "mergeTagsConfirm": "Bekräfta sammanslagning",
+    "browseByTagTitle": "Artiklar taggade med \"{{tag}}\"",
+    "tagCloudInstructions": "Klicka på en tagg för att filtrera artiklar",
+    "allTagsCountLabel": "{{count}} taggar",
+    "tagManagementIntro": "Administratörer kan slå samman eller ta bort taggar här",
+    "mergeSuccess": "Taggar sammanslagna",
+    "mergeError": "Kunde inte slå samman taggar",
+    "addTag": "Lägg till ny tagg",
+    "editTag": "Redigera tagg",
+    "deleteTag": "Ta bort tagg",
+    "tagName": "Taggnamn",
+    "tagNamePlaceholder": "Ange taggnamn",
+    "usageCount": "Användningsantal",
+    "searchTags": "Sök taggar...",
+    "confirmDeleteTag": "Bekräfta borttagning",
+    "deleteTagWarning": "Denna åtgärd kan inte ångras.",
+    "deleteTagDetail": "Är du säker på att du vill ta bort taggen \"{{tag}}\"?",
+    "deleteTagUsage": "Denna tagg används för närvarande i {{count}} artikel/artiklar. Den kommer att tas bort från alla.",
+    "tagDeleted": "Tagg borttagen",
+    "tagAdded": "Tagg tillagd",
+    "tagUpdated": "Tagg omdöpt",
+    "tagExists": "En tagg med detta namn finns redan",
+    "tagNameRequired": "Taggnamnet kan inte vara tomt",
+    "currentTag": "Nuvarande tagg:",
+    "newTagName": "Nytt taggnamn",
+    "renameTagInfo": "Detta kommer att byta namn på taggen i alla {{count}} artikel/artiklar",
+    "selectSourceTags": "Välj källtaggar",
+    "sourceTagsHelp": "Välj taggar att slå samman till en måltagg",
+    "selectTargetTag": "Välj måltagg",
+    "targetTagHelp": "Ange namnet på måltaggen",
+    "enterTag": "Ange taggnamn",
+    "tagsMerged": "Taggar sammanslagna",
+    "tagCount": "{{count}} artikel/artiklar",
+    "cancel": "Avbryt",
+    "save": "Spara ändringar",
+    "adding": "Lägger till...",
+    "saving": "Sparar...",
+    "deleting": "Tar bort...",
+    "noTagsFound": "Inga taggar hittades som matchar din sökning",
+    "articlesTaggedWith": "Artiklar taggade med",
+    "noArticlesWithTag": "Inga artiklar hittades med denna tagg"
+  },
+  "revisions": {
+    "title": "Revisionshistorik",
+    "version": "Version",
+    "viewHistory": "Visa historik",
+    "compareVersions": "Jämför versioner",
+    "restoreVersion": "Återställ version",
+    "viewVersion": "Visa version",
+    "restoreThisVersion": "Återställ denna version",
+    "compareSelected": "Jämför valda",
+    "cancelCompare": "Avbryt jämförelse",
+    "loading": "Laddar revisioner...",
+    "loadingComparison": "Laddar jämförelse...",
+    "noRevisions": "Inga revisioner hittades",
+    "empty": "Tom",
+    "noDescription": "Ingen beskrivning angiven",
+    "editedBy": "Redigerad av",
+    "editedAt": "Redigerad den",
+    "changeDescription": "Ändringsbeskrivning",
+    "versionNumber": "Version {{number}}",
+    "backToList": "Tillbaka till listan",
+    "selectToCompare": "Välj för att jämföra",
+    "category": "Kategori",
+    "summary": "Sammanfattning",
+    "clinicalSignificance": "Klinisk betydelse",
+    "interpretation": "Tolkning",
+    "compareVersionTitle": "Jämför version {{v1}} och version {{v2}}",
+    "changedField": "Ändrad",
+    "unchangedField": "Oförändrad"
+  },
+  "media": {
+    "totalImages": "Totalt antal bilder",
+    "totalSize": "Total storlek",
+    "unusedImages": "Oanvända bilder",
+    "unusedSize": "Oanvänd storlek"
+  },
+  "messages": {
+    "success": {
+      "urlCopied": "URL kopierad till urklipp"
+    },
+    "error": {
+      "loadFailed": "Kunde inte ladda data",
+      "somethingWrong": "Något gick fel"
+    },
+    "info": {
+      "noData": "Ingen data tillgänglig"
+    },
+    "confirm": {
+      "deleteArticle": "Bekräfta borttagning av artikel",
+      "deleteArticleDetail": "Är du säker på att du vill ta bort \"{{title}}\"? Denna åtgärd kan inte ångras."
+    }
+  },
+  "sort": {
+    "by": "Sortera efter",
+    "descending": "Nyaste först",
+    "ascending": "Äldsta först"
+  },
+  "table": {
+    "title": "Titel",
+    "category": "Kategori",
+    "status": "Status",
+    "actions": "Åtgärder"
   }
 }
